--- a/omos.html
+++ b/omos.html
@@ -27,12 +27,26 @@
     <header>
 
         <nav>
-            <a href="index.html">Forside</a>
-            <a href="piercinger.html">Piercinger</a>
-            <a href="praktiskinfo.html" id="menupraktiskinfo">Praktisk info</a>
-            <a href="omos.html">Om os</a>
-            <a href="priser.html">Priser</a>
-            <a href="kontaktbooking.html" id="menukontaktbooking">Kontakt/booking</a>
+
+            <div id="topnav" class="hidden">
+                <a href="index.html">Forside</a>
+                <a href="piercinger.html">Piercinger</a>
+                <a href="praktiskinfo.html" id="menupraktiskinfo">Praktisk info</a>
+                <a href="omos.html">Om os</a>
+                <a href="priser.html">Priser</a>
+                <a href="kontaktbooking.html" id="menukontaktbooking">Kontakt/booking</a>
+            </div>
+
+            <div id="menuknap">☰</div>
+            <div id="burger" class="hidden">
+                <li> <a href="index.html">Forside</a></li>
+                <li> <a href="piercinger.html">Piercinger</a></li>
+                <li> <a href="praktiskinfo.html" id="menupraktiskinfo">Praktisk info</a></li>
+                <li> <a href="omos.html">Om os</a></li>
+                <li> <a href="priser.html">Priser</a></li>
+                <li><a href="kontaktbooking.html" id="menukontaktbooking">Kontakt/booking</a></li>
+            </div>
+
         </nav>
 
     </header>
@@ -120,7 +134,7 @@
                         <p>Kira Kinch er piercer.<br>Hun er udlært hos Gorlubb piercing af Jack Rubini, og hun færdiggjorde sin oplæring i december 2017.<br>
                             Kiras interesse for piercing startede i teenage-årene, med en fascination af Punkkulturen.<br>
                             Som piercer lægger hun stor vægt på, at skabe rolige og trygge omgivelser for sine kunder, samt at udføre
-                            sit arbejde med de bedste teknikker - derfor bestræber hun sig også på at lære mere, og forbedre sit fag.</p><br><br><br><br><br><br><br>
+                            sit arbejde med de bedste teknikker - derfor bestræber hun sig også på at lære mere, og forbedre sit fag.</p><br><br><br><br><br><br>
                     </div>
                 </div>
                 <div class="bottom">
@@ -209,4 +223,6 @@
     </footer>
 
     <script src="script.js"></script>
-</body></html>
+</body>
+
+</html>
