--- a/praktiskinfo.html
+++ b/praktiskinfo.html
@@ -24,14 +24,30 @@
 
 <body>
     <header>
+
         <nav>
-            <a href="index.html">Forside</a>
-            <a href="piercinger.html">Piercinger</a>
-            <a href="praktiskinfo.html" id="menupraktiskinfo">Praktisk info</a>
-            <a href="omos.html">Om os</a>
-            <a href="priser.html">Priser</a>
-            <a href="kontaktbooking.html" id="menukontaktbooking">Kontakt/booking</a>
+
+            <div id="topnav" class="hidden">
+                <a href="index.html">Forside</a>
+                <a href="piercinger.html">Piercinger</a>
+                <a href="praktiskinfo.html" id="menupraktiskinfo">Praktisk info</a>
+                <a href="omos.html">Om os</a>
+                <a href="priser.html">Priser</a>
+                <a href="kontaktbooking.html" id="menukontaktbooking">Kontakt/booking</a>
+            </div>
+
+            <div id="menuknap">☰</div>
+            <div id="burger" class="hidden">
+                <li> <a href="index.html">Forside</a></li>
+                <li> <a href="piercinger.html">Piercinger</a></li>
+                <li> <a href="praktiskinfo.html" id="menupraktiskinfo">Praktisk info</a></li>
+                <li> <a href="omos.html">Om os</a></li>
+                <li> <a href="priser.html">Priser</a></li>
+                <li><a href="kontaktbooking.html" id="menukontaktbooking">Kontakt/booking</a></li>
+            </div>
+
         </nav>
+
     </header>
 
     <a href="index.html">
@@ -46,8 +62,7 @@
         <h1>Praktisk Info</h1>
         <div class="txt">
             <h2>Materialer</h2>
-            <p>Det er ikke alle materialer, der egner sig til Piercing-smykker.
-                I den første tid, efter du har fået din nye piercing, er piercingen et sår. Derfor er det meget vigtigt, at du ikke udsætter piercingen for smykker, der kan afgive stoffer, som kan forsinke sårhelingen, og eventuelt fremkalde allergiske reaktioner.</p>
+            <p>Det er ikke alle materialer, der egner sig til Piercing-smykker. I den første tid, efter du har fået din nye piercing, er piercingen et sår. Derfor er det meget vigtigt, at du ikke udsætter piercingen for smykker, der kan afgive stoffer, som kan forsinke sårhelingen, og eventuelt fremkalde allergiske reaktioner.</p>
             <p>Hos Gorlubb bruger vi implantat-stål ( også kaldet kirurgisk stål ), til nye piercinger.
                 Det er også muligt at bruge titanium eller niobium smykker, direkte til den nye piercing. Du bør under ingen omstændigheder bruge guld, under 18 karat nikkelfrit, sølv -uanset renhed, eller billige nikkelsmykker i din nye piercing. De billige smykker kan forårsage nikkelallergi, som du aldrig slipper af med igen, og med sølv og guld-smykker, er dét metal, man tilsætter til legeringen, ikke altid helt godt nok.</p>
             <p>Når din piercing, er helet helt igennem, har du en større frihed til, at bruge smykker af en mindre lødighed, for eksempel som vedhæng, men vores anbefaling er, at du holder dig til kvalitets-smykker, som er lavet til at blive brugt i piercing-sammenhæng.</p>
