--- a/piercinger.html
+++ b/piercinger.html
@@ -26,16 +26,29 @@
     <header>
 
         <nav>
-            <a href="index.html">Forside</a>
-            <a href="piercinger.html">Piercinger</a>
-            <a href="praktiskinfo.html" id="menupraktiskinfo">Praktisk info</a>
-            <a href="omos.html">Om os</a>
-            <a href="priser.html">Priser</a>
-            <a href="kontaktbooking.html" id="menukontaktbooking">Kontakt/booking</a>
+
+            <div id="topnav" class="hidden">
+                <a href="index.html">Forside</a>
+                <a href="piercinger.html">Piercinger</a>
+                <a href="praktiskinfo.html" id="menupraktiskinfo">Praktisk info</a>
+                <a href="omos.html">Om os</a>
+                <a href="priser.html">Priser</a>
+                <a href="kontaktbooking.html" id="menukontaktbooking">Kontakt/booking</a>
+            </div>
+
+            <div id="menuknap">☰</div>
+            <div id="burger" class="hidden">
+                <li> <a href="index.html">Forside</a></li>
+                <li> <a href="piercinger.html">Piercinger</a></li>
+                <li> <a href="praktiskinfo.html" id="menupraktiskinfo">Praktisk info</a></li>
+                <li> <a href="omos.html">Om os</a></li>
+                <li> <a href="priser.html">Priser</a></li>
+                <li><a href="kontaktbooking.html" id="menukontaktbooking">Kontakt/booking</a></li>
+            </div>
+
         </nav>
 
     </header>
-
     <a href="index.html">
         <div class="logo">
 
@@ -57,6 +70,7 @@
             <video controls>
                 <source src="videoer/piercingproces.mp4" type="video/mp4">
             </video>
+            <figcaption><a href="https://audionautix.com/">Music by Audionautix.com</a></figcaption>
         </div>
 
         <!--        *******Video slut*******-->
