--- a/index.html
+++ b/index.html
@@ -52,9 +52,11 @@
     </header>
 
 
-    <div class="logo">
+    <a href="index.html">
+        <div class="logo">
 
-    </div>
+        </div>
+    </a>
 
 
     <div id="splash">
