--- a/kontaktbooking.html
+++ b/kontaktbooking.html
@@ -64,61 +64,67 @@
 
     <section id="kontaktbooking">
 
-
-        <div class="bestilling">
-            <div class="txt">
-                <h1>Book direkte</h1>
-            </div>
-            <iframe src="https://piercing.bestilling.nu" height="600" width="1000"></iframe>
-        </div>
-
-        <div class="kontakt">
-            <div class="txt">
-                <h1>Kontakt os direkte</h1>
-            </div>
-            <div class="txt">
-                <h3>Navn:</h3>
-            </div>
-            <div id="navn">
-                <input type="text">
-            </div>
-            <div class="txt">
-                <h3>Adresse:</h3>
-            </div>
-            <div id="adresse">
-                <input type="text">
-            </div>
-            <div class="txt">
-                <h3>Postnr. og by:</h3>
-            </div>
-            <div id="by">
-                <input type="text">
-            </div>
-            <div class="txt">
-                <h3>Telefonnummer:</h3>
-            </div>
-            <div id="tlf">
-                <input type="text">
-            </div>
-            <div class="txt">
-                <h3>Emailadresse:</h3>
-            </div>
-            <div id="email">
-                <input type="text">
-            </div>
-            <div class="txt">
-                <h3>Besked:</h3>
-            </div>
-            <div id="besked">
-                <input type="text">
+        <div class="wrap">
+            <div class="bestilling">
+                <div class="txt">
+                    <h1>Book direkte</h1>
+                </div>
+                <iframe src="https://piercing.bestilling.nu" height="600" width="350"></iframe>
             </div>
         </div>
-
-        <div class="kort">
-            <h1>Her finder du os</h1>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2250.0200148485114!2d12.554820315800667!3d55.671252105746326!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46525374bbc4e677%3A0xf87c94b27ceaa2a!2sGorlubb%20Piercing!5e0!3m2!1sda!2sdk!4v1576485772953!5m2!1sda!2sdk" width="1000" height="450"></iframe>
+        <div class="wrap">
+            <div class="kontakt">
+                <div class="txt">
+                    <h1>Kontakt os direkte</h1>
+                </div>
+                <div class="txt">
+                    <h3>Navn:</h3>
+                </div>
+                <div id="navn">
+                    <input type="text">
+                </div>
+                <div class="txt">
+                    <h3>Adresse:</h3>
+                </div>
+                <div id="adresse">
+                    <input type="text">
+                </div>
+                <div class="txt">
+                    <h3>Postnr. og by:</h3>
+                </div>
+                <div id="by">
+                    <input type="text">
+                </div>
+                <div class="txt">
+                    <h3>Telefonnummer:</h3>
+                </div>
+                <div id="tlf">
+                    <input type="text">
+                </div>
+                <div class="txt">
+                    <h3>Emailadresse:</h3>
+                </div>
+                <div id="email">
+                    <input type="text">
+                </div>
+                <div class="txt">
+                    <h3>Besked:</h3>
+                </div>
+                <div id="besked">
+                    <input type="text">
+                    <div class="sendknap">
+                        <p>Send</p>
+                    </div>
+                </div>
+            </div>
         </div>
+        <div class="wrap">
 
+            <div class="kort">
+                <h1>Her finder du os</h1>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2250.0200148485114!2d12.554820315800667!3d55.671252105746326!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46525374bbc4e677%3A0xf87c94b27ceaa2a!2sGorlubb%20Piercing!5e0!3m2!1sda!2sdk!4v1576485772953!5m2!1sda!2sdk" width="350" height="450"></iframe>
+            </div>
+        </div>
 
 
     </section>
