lavet hover funktion og kort tekst på forside

--- a/index.html
+++ b/index.html
@@ -82,6 +82,10 @@
 
 
     <section id="forside">
+        <div class="wrap velkommen">
+            <h1>Velkommen til Gorlubb Piercing!</h1>
+            <p>Vi opdaterer løbende vores sociale medier, med billeder af vores arbejde, hverdagen i butikken og gode tilbud</p>
+        </div>
 
         <div class="wrap txt">
             <h1>Følg med i vores arbejde:</h1>
@@ -94,7 +98,6 @@
                 <img src="billeder/instagram.png" alt="instagram">
             </div>
         </div>
-
 
 
     </section>
