små rettelser i forhold til validering

--- a/index.html
+++ b/index.html
@@ -39,12 +39,14 @@
 
             <div id="menuknap">☰</div>
             <div id="burger" class="hidden">
-                <li> <a href="index.html">Forside</a></li>
-                <li> <a href="piercinger.html">Piercinger</a></li>
-                <li> <a href="praktiskinfo.html" id="menupraktiskinfo">Praktisk info</a></li>
-                <li> <a href="omos.html">Om os</a></li>
-                <li> <a href="priser.html">Priser</a></li>
-                <li><a href="kontaktbooking.html" id="menukontaktbooking">Kontakt/booking</a></li>
+                <ul>
+                    <li> <a href="index.html">Forside</a></li>
+                    <li> <a href="piercinger.html">Piercinger</a></li>
+                    <li> <a href="praktiskinfo.html">Praktisk info</a></li>
+                    <li> <a href="omos.html">Om os</a></li>
+                    <li> <a href="priser.html">Priser</a></li>
+                    <li><a href="kontaktbooking.html">Kontakt/booking</a></li>
+                </ul>
             </div>
 
         </nav>
@@ -59,9 +61,7 @@
     </a>
 
 
-    <div id="splash">
 
-    </div>
 
     <section id="splash">
         <div class="wrap sort">
