--- a/piercinger.html
+++ b/piercinger.html
@@ -38,12 +38,14 @@
 
             <div id="menuknap">☰</div>
             <div id="burger" class="hidden">
-                <li> <a href="index.html">Forside</a></li>
-                <li> <a href="piercinger.html">Piercinger</a></li>
-                <li> <a href="praktiskinfo.html" id="menupraktiskinfo">Praktisk info</a></li>
-                <li> <a href="omos.html">Om os</a></li>
-                <li> <a href="priser.html">Priser</a></li>
-                <li><a href="kontaktbooking.html" id="menukontaktbooking">Kontakt/booking</a></li>
+                <ul>
+                    <li> <a href="index.html">Forside</a></li>
+                    <li> <a href="piercinger.html">Piercinger</a></li>
+                    <li> <a href="praktiskinfo.html">Praktisk info</a></li>
+                    <li> <a href="omos.html">Om os</a></li>
+                    <li> <a href="priser.html">Priser</a></li>
+                    <li><a href="kontaktbooking.html">Kontakt/booking</a></li>
+                </ul>
             </div>
 
         </nav>
@@ -70,7 +72,9 @@
             <video controls>
                 <source src="videoer/piercingproces.mp4" type="video/mp4">
             </video>
-            <figcaption><a href="https://audionautix.com/">Music by Audionautix.com</a></figcaption>
+            <figure class="videotxt">
+                <figcaption><a href="https://audionautix.com/">Music by Audionautix.com</a></figcaption>
+            </figure>
         </div>
 
         <!--        *******Video slut*******-->
@@ -390,7 +394,7 @@
                 </div>
                 <div class="img">
                     <figure>
-                        <img src="piercinger/innerlaebe.png">
+                        <img src="piercinger/innerlaebe.png" alt="piercing tegning">
                     </figure>
                 </div>
                 <div class="txt">
@@ -488,7 +492,7 @@
                     <h2></h2>
                 </div>
                 <figure>
-                    <img src="">
+
                 </figure>
             </div>
 
@@ -497,7 +501,7 @@
                     <h2></h2>
                 </div>
                 <figure>
-                    <img src="">
+
                 </figure>
             </div>
 
