--- a/priser.html
+++ b/priser.html
@@ -39,12 +39,14 @@
 
             <div id="menuknap">☰</div>
             <div id="burger" class="hidden">
-                <li> <a href="index.html">Forside</a></li>
-                <li> <a href="piercinger.html">Piercinger</a></li>
-                <li> <a href="praktiskinfo.html" id="menupraktiskinfo">Praktisk info</a></li>
-                <li> <a href="omos.html">Om os</a></li>
-                <li> <a href="priser.html">Priser</a></li>
-                <li><a href="kontaktbooking.html" id="menukontaktbooking">Kontakt/booking</a></li>
+                <ul>
+                    <li> <a href="index.html">Forside</a></li>
+                    <li> <a href="piercinger.html">Piercinger</a></li>
+                    <li> <a href="praktiskinfo.html">Praktisk info</a></li>
+                    <li> <a href="omos.html">Om os</a></li>
+                    <li> <a href="priser.html">Priser</a></li>
+                    <li><a href="kontaktbooking.html">Kontakt/booking</a></li>
+                </ul>
             </div>
 
         </nav>
@@ -111,10 +113,12 @@
                     <td>Industrial</td>
                     <td>500 kr.</td>
                 </tr>
-                <th class="kategori">
-                    Ansigtspiercinger
-                </th>
-                <th class="kategori">Pris</th>
+                <tr>
+                    <th class="kategori">
+                        Ansigtspiercinger
+                    </th>
+                    <th class="kategori">Pris</th>
+                </tr>
                 <tr>
                     <td>Smiley Piercing</td>
                     <td>400 kr.</td>
@@ -159,10 +163,12 @@
                     <td>Tunge streng / Web</td>
                     <td>450 kr.</td>
                 </tr>
-                <th class="kategori">
-                    Kønsdel-piercinger
-                </th>
-                <th class="kategori">Pris</th>
+                <tr>
+                    <th class="kategori">
+                        Ansigtspiercinger
+                    </th>
+                    <th class="kategori">Pris</th>
+                </tr>
                 <tr>
                     <td>Forhudspiercing, Guiche, Lorum, Cavic, Pubic, Frenum</td>
                     <td>500 kr.</td>
@@ -179,10 +185,12 @@
                     <td>Prince Albert, Queen Victoria</td>
                     <td>550 kr.</td>
                 </tr>
-                <th class="kategori">
-                    Øvrige Piercinger
-                </th>
-                <th class="kategori">Pris</th>
+                <tr>
+                    <th class="kategori">
+                        Ansigtspiercinger
+                    </th>
+                    <th class="kategori">Pris</th>
+                </tr>
                 <tr>
                     <td>Surface piercing</td>
                     <td>500. kr.</td>
