--- a/hudpiercing.html
+++ b/hudpiercing.html
@@ -38,12 +38,14 @@
 
             <div id="menuknap">☰</div>
             <div id="burger" class="hidden">
-                <li> <a href="index.html">Forside</a></li>
-                <li> <a href="piercinger.html">Piercinger</a></li>
-                <li> <a href="praktiskinfo.html" id="menupraktiskinfo">Praktisk info</a></li>
-                <li> <a href="omos.html">Om os</a></li>
-                <li> <a href="priser.html">Priser</a></li>
-                <li><a href="kontaktbooking.html" id="menukontaktbooking">Kontakt/booking</a></li>
+                <ul>
+                    <li> <a href="index.html">Forside</a></li>
+                    <li> <a href="piercinger.html">Piercinger</a></li>
+                    <li> <a href="praktiskinfo.html">Praktisk info</a></li>
+                    <li> <a href="omos.html">Om os</a></li>
+                    <li> <a href="priser.html">Priser</a></li>
+                    <li><a href="kontaktbooking.html">Kontakt/booking</a></li>
+                </ul>
             </div>
 
         </nav>
