--- a/omos.html
+++ b/omos.html
@@ -39,14 +39,15 @@
 
             <div id="menuknap">☰</div>
             <div id="burger" class="hidden">
-                <li> <a href="index.html">Forside</a></li>
-                <li> <a href="piercinger.html">Piercinger</a></li>
-                <li> <a href="praktiskinfo.html" id="menupraktiskinfo">Praktisk info</a></li>
-                <li> <a href="omos.html">Om os</a></li>
-                <li> <a href="priser.html">Priser</a></li>
-                <li><a href="kontaktbooking.html" id="menukontaktbooking">Kontakt/booking</a></li>
+                <ul>
+                    <li> <a href="index.html">Forside</a></li>
+                    <li> <a href="piercinger.html">Piercinger</a></li>
+                    <li> <a href="praktiskinfo.html">Praktisk info</a></li>
+                    <li> <a href="omos.html">Om os</a></li>
+                    <li> <a href="priser.html">Priser</a></li>
+                    <li><a href="kontaktbooking.html">Kontakt/booking</a></li>
+                </ul>
             </div>
-
         </nav>
 
     </header>
@@ -69,7 +70,9 @@
             <video controls>
                 <source src="videoer/gorlubb_piercinger_om_os_720p.mp4" type="video/mp4">
             </video>
-            <figcaption><a href="https://audionautix.com/">Music by Audionautix.com</a></figcaption>
+            <figure class="videotxt">
+                <figcaption><a href="https://audionautix.com/">Music by Audionautix.com</a></figcaption>
+            </figure>
         </div>
 
         <!--        *******Video slut*******-->
