--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
 
     <section id="forside">
-        <div class="wrap velkommen">
+        <div class="wrap velkommen txt">
             <h1>Velkommen til Gorlubb Piercing!</h1>
             <p>Vi opdaterer løbende vores sociale medier, med billeder af vores arbejde, hverdagen i butikken og gode tilbud</p>
         </div>
